fix(breadcrumbs): fix #2 breadcrubms visibility

--- a/src/app/theme/components/baContentTop/baContentTop.scss
+++ b/src/app/theme/components/baContentTop/baContentTop.scss
@@ -27,6 +27,9 @@ h1.al-title {
   li {
     font-size: 18px;
     font-weight: $font-normal;
+    a {
+      color: $primary-light;
+    }
   }
 }
 
