--- a/src/app/theme/sass/_layout.scss
+++ b/src/app/theme/sass/_layout.scss
@@ -61,6 +61,7 @@ a {
   margin-left: $left-space;
   padding: 66px 0 34px 0;
   min-height: 500px;
+  position: relative;
 }
 
 .al-footer {
